{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 55,
  "lineage": "bdd017e1-6d6e-779d-bc2d-f6147554dbec",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c69002f2e7a9564d",
            "association_id": "eipassoc-0263cfe792bbcbe65",
            "domain": "vpc",
            "id": "eipalloc-0c69002f2e7a9564d",
            "instance": "i-0157fb1e57c5095fa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e80a3e105dc99fc7",
            "private_dns": "ip-10-0-1-233.ec2.internal",
            "private_ip": "10.0.1.233",
            "public_dns": "ec2-35-169-81-30.compute-1.amazonaws.com",
            "public_ip": "35.169.81.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins_eip"
            },
            "tags_all": {
              "Name": "jenkins_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.jenkins_server",
            "module.ec2_instance.aws_key_pair.aws_kp",
            "module.ec2_instance.data.aws_ami.ubuntu",
            "module.ec2_instance.tls_private_key.example",
            "module.security_group.aws_security_group.jenkins_sg",
            "module.vpc.aws_subnet.aws_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:037536052086:instance/i-0157fb1e57c5095fa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0157fb1e57c5095fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e80a3e105dc99fc7",
            "private_dns": "ip-10-0-1-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5d678484a75912b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005c1e23f96d8c26f",
            "tags": {
              "Name": "jenkins_server"
            },
            "tags_all": {
              "Name": "jenkins_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e1bd61e080b63ce"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.ec2_instance.aws_key_pair.aws_kp",
            "module.ec2_instance.data.aws_ami.ubuntu",
            "module.ec2_instance.tls_private_key.example",
            "module.security_group.aws_security_group.jenkins_sg",
            "module.vpc.aws_subnet.aws_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:037536052086:security-group/sg-09e1bd61e080b63ce",
            "description": "Security group for jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e1bd61e080b63ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "87.244.151.41/32"
                ],
                "description": "Allow SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_sg",
            "name_prefix": "",
            "owner_id": "037536052086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_sg"
            },
            "tags_all": {
              "Name": "jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5a52491c510beac"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:037536052086:internet-gateway/igw-0f5d029eac5fef3e4",
            "id": "igw-0f5d029eac5fef3e4",
            "owner_id": "037536052086",
            "tags": {
              "Name": "aws_igw"
            },
            "tags_all": {
              "Name": "aws_igw"
            },
            "vpc_id": "vpc-0c5a52491c510beac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:037536052086:route-table/rtb-0b929a5e04f7af7ea",
            "id": "rtb-0b929a5e04f7af7ea",
            "owner_id": "037536052086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5d029eac5fef3e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5a52491c510beac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.aws_igw",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd24b4683075d6ab",
            "route_table_id": "rtb-0b929a5e04f7af7ea",
            "subnet_id": "subnet-005c1e23f96d8c26f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.aws_igw",
            "module.vpc.aws_route_table.aws_public_rt",
            "module.vpc.aws_subnet.aws_public_subnet",
            "module.vpc.aws_vpc.aws_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:037536052086:subnet/subnet-005c1e23f96d8c26f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005c1e23f96d8c26f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037536052086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_public_subnet"
            },
            "tags_all": {
              "Name": "aws_public_subnet"
            },
            "vpc_id": "vpc-0c5a52491c510beac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:037536052086:vpc/vpc-0c5a52491c510beac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d08c62fa5c0bd24b",
            "default_route_table_id": "rtb-0dbfe5f2ceb2509ab",
            "default_security_group_id": "sg-02957ad212c807964",
            "dhcp_options_id": "dopt-02c129fe5a7cc70b5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5a52491c510beac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbfe5f2ceb2509ab",
            "owner_id": "037536052086",
            "tags": {
              "Name": "aws_vpc"
            },
            "tags_all": {
              "Name": "aws_vpc"
            }
          }
        }
      ]
    }
  ]
}